# CDCL-solver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cdcl.cpp  cdcl.hpp  cnf.cpp  cnf.hpp  compile_commands.json  flake.nix  main.cpp
src/: cdcl.cpp  cdcl.hpp  cnf.cpp  cnf.hpp  main.cpp  test.cpp  verify.cpp
src/cdcl/: CMakeLists.txt  basetype.cpp  cdcl.cpp  cnf.cpp  graph.cpp  heuristic.cpp
src/cdcl/include/cdcl/: basetype.hpp  cdcl.hpp  cnf.hpp  graph.hpp  heuristic.hpp
src/verifier/: check_utility.hpp  verify.cpp
